--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -21,6 +21,7 @@
   }
   
   body {
+    background: #FFFFFF;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -49,10 +50,10 @@
   
   a { text-decoration: none; }
   
-  a:link { color: #000028}
-  a:hover { color: #005578}
-  a:active { color: #000028}
-  a:visited { color: #000028}
+  a:link { color: #FFFFFF}
+  a:hover { color: #FFFFFF}
+  a:active { color: #FFFFFF}
+  a:visited { color: #FFFFFF}
   
   ul, ol {
     margin: 0 0 1rem;
