--- a/Estilos/main.css
+++ b/Estilos/main.css
@@ -1,339 +1,438 @@
 .grid-container {
-    display: grid;
-    grid-row-gap: 10rem;
-    grid-template-columns: auto auto;
-    margin: 10rem 0;
-  }
+  display: grid;
+  grid-row-gap: 10rem;
+  grid-template-columns: auto auto;
+  margin: 10rem 0;
+}
 
 .item1 {
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
 
 .grid-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:flex-start;
-    color: #000;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-family: 'IBM Plex Sans', sans-serif;
-    border-left: 1px solid black;
-    padding-left: 6.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "IBM Plex Sans", sans-serif;
+  border-left: 1px solid black;
+  padding-left: 6.5rem;
 }
 
 #nosotros-conteiner {
-    width: 55%;
-    margin: 0 auto;
+  width: 55%;
+  margin: 0 auto;
 }
 
 #nosotros-conteiner:nth-child(1) {
-    margin-top: 6rem;
-} 
-
-.nosotros-title {
-    font-size: 3.5rem;
-    font-family: 'IBM Plex Sans', sans-serif;
-    margin-top: 4rem;
+  margin-top: 6rem;
 }
 
+.nosotros-title {
+  font-size: 3.5rem;
+  font-family: "IBM Plex Sans", sans-serif;
+  margin-top: 4rem;
+}
 
-.nosotros-text { 
-    font-size: 2rem;
-    text-align: justify;
-    margin: 1rem 0 6rem 0;
-    font-family: 'Poppins', sans-serif;
+.nosotros-text {
+  font-size: 2rem;
+  text-align: justify;
+  margin: 1rem 0 6rem 0;
+  font-family: "Poppins", sans-serif;
 }
 
 .style-title {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
 .style-subtitle {
-    font-size: 2rem;   
+  font-size: 2rem;
 }
 
 .grid-img {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-right: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid black;
 }
 
-
 .img-main {
-    width: 50rem;
-    height: 30rem;
-    border-radius: 10px;
+  width: 50rem;
+  height: 30rem;
+  border-radius: 10px;
 }
 
 /* --------------------------------------- */
 
-.container{
-    position: relative;
-    justify-self: center;
-    align-self: center;
+.container {
+  position: relative;
+  justify-self: center;
+  align-self: center;
+}
+
+.container .card {
+  position: relative;
+  width: 320px;
+  height: 450px;
+  background: #232323;
+  border-radius: 20px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.container .card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ab4418;
+  clip-path: circle(150px at 80% 20%);
+  transition: 0.5s ease-in-out;
+}
+
+.container .card:hover:before {
+  clip-path: circle(300px at 80% -20%);
+}
+
+.container .card:after {
+  content: "G";
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  font-size: 12em;
+  font-weight: 800;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.container .card .imgBx {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10000;
+  width: 100%;
+  height: 220px;
+  transition: 0.5s;
+}
+
+.container .card:hover .imgBx {
+  top: 0%;
+  transform: translateY(0%);
+}
+
+.container .card .imgBx img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-25deg);
+  width: 270px;
+}
+
+.container .card .contentBx {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  transition: 1s;
+  z-index: 10;
+}
+
+.container .card:hover .contentBx {
+  height: 210px;
+}
+
+.container .card .contentBx h2 {
+  position: relative;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #fff;
+  margin: 0;
+}
+
+.container .card .contentBx .size,
+.container .card .contentBx .color {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 20px;
+  transition: 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.container .card:hover .contentBx .size {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0.5s;
+}
+
+.container .card:hover .contentBx .color {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0.6s;
+}
+
+.container .card .contentBx .size h3,
+.container .card .contentBx .color h3 {
+  color: #fff;
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-right: 10px;
+}
+
+.container .card .contentBx .size span {
+  width: 26px;
+  height: 26px;
+  text-align: center;
+  line-height: 26px;
+  font-size: 14px;
+  display: inline-block;
+  color: #111;
+  background: #fff;
+  margin: 0 5px;
+  transition: 0.5s;
+  color: #111;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.container .card .contentBx .size span:hover {
+  background: #fff;
+}
+
+.container .card .contentBx .color span {
+  width: 20px;
+  height: 20px;
+  background: #ab4418;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.container .card .contentBx .color span:nth-child(2) {
+  background: #9bdc28;
+}
+
+.container .card .contentBx .color span:nth-child(3) {
+  background: #03a9f4;
+}
+
+.container .card .contentBx .color span:nth-child(4) {
+  background: #e91e63;
+}
+
+.container .card .contentBx a {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #fff;
+  border-radius: 4px;
+  margin-top: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #111;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: 0.5s;
+  margin-top: 0;
+}
+
+.container .card:hover .contentBx a {
+  opacity: 1;
+  transform: translateY(0px);
+  transition-delay: 0.75s;
+}
+
+#grid-productos {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 5rem;
+  margin: 5% 10%;
+  align-items: center;
+}
+
+/* ------------------------------------- */
+
+.css-button-arrow--black {
+  min-width: 130px;
+  height: 40px;
+  color: #fff;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  overflow: hidden;
+  border-radius: 5px;
+  border: none;
+  background-color: #343a40;
+  margin: 3rem auto;
+}
+.css-button-arrow--black:hover {
+  border-radius: 5px;
+  padding-right: 24px;
+  padding-left: 8px;
+}
+.css-button-arrow--black:hover:after {
+  opacity: 1;
+  right: 10px;
+}
+.css-button-arrow--black:after {
+  content: "\00BB";
+  position: absolute;
+  opacity: 0;
+  font-size: 20px;
+  line-height: 40px;
+  top: 0;
+  right: -20px;
+  transition: 0.4s;
+}
+/* ------------------------------------------- */
+.css-button-arrow--grey {
+  min-width: 130px;
+  height: 40px;
+  color: #fff;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  overflow: hidden;
+  border-radius: 5px;
+  border: none;
+  background-color: #6c757d;
+}
+.css-button-arrow--grey:hover {
+  border-radius: 5px;
+  padding-right: 24px;
+  padding-left: 8px;
+}
+.css-button-arrow--grey:hover:after {
+  opacity: 1;
+  right: 10px;
+}
+.css-button-arrow--grey:after {
+  content: "\00BB";
+  position: absolute;
+  opacity: 0;
+  font-size: 20px;
+  line-height: 40px;
+  top: 0;
+  right: -20px;
+  transition: 0.4s;
+}
+/* ------------------------------------------- */
+
+.form-input {
+  margin-left: 2rem;
+  width: 100%;
+  padding: 1rem;
+}
+
+#form-conteiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
+#contact-form {
+  width: 30%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.label-info {
+  font-size: 2rem;
+  font-family: "IBM Plex Sans", sans-serif;
+  margin-left: 2rem;
+  width: 100%;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+/* ---------------------------------------- */
+@media only screen and (max-width: 1750px) {
+  .grid-container {
+    grid-row-gap: 2rem;
+    grid-template-columns: auto;
+    width: 40%;
+    margin: 10rem auto;
   }
-  
-  .container .card{
-    position: relative;
-    width: 320px;
-    height: 450px;
-    background: #232323;
-    border-radius: 20px;
-    overflow: hidden;
-    margin: 0 auto;
+  .grid-text {
+    border-left: none;
+    border-top: 2px solid #000;
+    padding-top: 5rem;
+    margin: 4rem auto;
+    padding-left: 3rem;
   }
-  
-  .container .card:before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #ab4418;
-    clip-path: circle(150px at 80% 20%);
-    transition: 0.5s ease-in-out;
+  .grid-img {
+    border-right: none;
   }
-  
-  .container .card:hover:before{
-    clip-path: circle(300px at 80% -20%);
+}
+
+@media only screen and (max-width: 1050px) {
+  .grid-container {
+    width: 80%;
   }
-  
-  .container .card:after{
-    content: 'G';
-    position: absolute;
-    top: 30%;
-    left: 30%;
-    font-size: 12em;
-    font-weight: 800;
-    font-style: italic;
-    color: rgba(255,255,255,0.30)
+
+  .img-main {
+    width: 30rem;
+    height: 20rem;
   }
-  
-  .container .card .imgBx{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10000;
-    width: 100%;
-    height: 220px;
-    transition: 0.5s;
-  }
-  
-  .container .card:hover .imgBx{
-    top: 0%;
-    transform: translateY(0%);
-      
-  }
-  
-  .container .card .imgBx img{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-25deg);
-    width: 270px;
-  }
-  
-  .container .card .contentBx{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    transition: 1s;
-    z-index: 10;
-  }
-  
-  .container .card:hover .contentBx{
-    height: 210px;
-  }
-  
-  .container .card .contentBx h2{
-    position: relative;
-    font-weight: 600;
-    letter-spacing: 1px;
-    color: #fff;
-    margin: 0;
-  }
-  
-  .container .card .contentBx .size, .container .card .contentBx .color {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 20px;
-    transition: 0.5s;opacity: 0;
-    visibility: hidden;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-  
-  .container .card:hover .contentBx .size{
-    opacity: 1;
-    visibility: visible;
-    transition-delay: 0.5s;
-  }
-  
-  .container .card:hover .contentBx .color{
-    opacity: 1;
-    visibility: visible;
-    transition-delay: 0.6s;
-  }
-  
-  .container .card .contentBx .size h3, .container .card .contentBx .color h3{
-    color: #fff;
-    font-weight: 300;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-right: 10px;
-  }
-  
-  .container .card .contentBx .size span{
-    width: 26px;
-    height: 26px;
-    text-align: center;
-    line-height: 26px;
-    font-size: 14px;
-    display: inline-block;
-    color: #111;
-    background: #fff;
-    margin: 0 5px;
-    transition: 0.5s;
-    color: #111;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .container .card .contentBx .size span:hover{
-    background: #fff;
-  }
-  
-  .container .card .contentBx .color span{
-    width: 20px;
-    height: 20px;
-    background: #ab4418;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-  }
-  
-  .container .card .contentBx .color span:nth-child(2){
-    background: #9bdc28;
-  }
-  
-  .container .card .contentBx .color span:nth-child(3){
-    background: #03a9f4;
-  }
-  
-  .container .card .contentBx .color span:nth-child(4){
-    background: #e91e63;
-  }
-  
-  .container .card .contentBx a{
-    display: inline-block;
-    padding: 10px 20px;
-    background: #fff;
-    border-radius: 4px;
-    margin-top: 10px;
-    text-decoration: none;
-    font-weight: 600;
-    color: #111;
-    opacity: 0;
-    transform: translateY(50px);
-    transition: 0.5s;
-    margin-top: 0;
-  }
-  
-  .container .card:hover .contentBx a{
-    opacity: 1;
-    transform: translateY(0px);
-    transition-delay: 0.75s;
-    
-  }
-  
+}
+
+/* ---------------------------------------------- */
+@media only screen and (max-width: 1350px) {
   #grid-productos {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 5rem;
-    margin: 5% 10%;
-    align-items: center;
+    grid-template-columns: auto auto;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  #grid-productos {
+    grid-template-columns: auto;
+  }
+}
+/* ---------------------------------------------- */
+@media only screen and (max-width: 750px) {
+  .nosotros-title {
+    font-size: 2.5rem;
   }
 
-  /* ------------------------------------- */
+  .nosotros-text {
+    font-size:1.5rem;
+  }
+  .nosotros-title > img {
+    width: 30px;
+  }
+}
 
-  .css-button-arrow--black {
-    min-width: 130px;
-    height: 40px;
-    color: #fff;
-    padding: 5px 10px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-    display: inline-block;
-    outline: none;
-    overflow: hidden;
-    border-radius: 5px;
-    border: none;
-    background-color: #343a40;
-    margin: 3rem auto;
+@media only screen and (max-width: 875px) {
+  #form-conteiner{
+    width: 80%;
   }
-  .css-button-arrow--black:hover {
-    border-radius: 5px;
-    padding-right: 24px;
-    padding-left:8px;
+  #contact-form{
+    width: 90%;
   }
-  .css-button-arrow--black:hover:after {
-    opacity: 1;
-    right: 10px;
-  }
-  .css-button-arrow--black:after {
-    content: "\00BB";
-    position: absolute;
-    opacity: 0;
-    font-size: 20px;
-    line-height: 40px;
-    top: 0;
-    right: -20px;
-    transition: 0.4s;
-  }
-
-  /* ------------------------------------------- */
-
-  .form-input{
-    margin-left: 2rem;
-    width: 100%;
-    padding: 1rem;
-  }
-
-  #form-conteiner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    margin: 0 auto;
-  }
-
-  #contact-form {
-    width: 30%;
-    margin: 0 auto;
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-  }
-
-  .label-info {
-    font-size: 2rem;
-    font-family: 'IBM Plex Sans', sans-serif;
-    margin-left: 2rem;
-    width: 100%;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
+}
